# tauri-tutorial

./: Cargo.toml  README.md
tauri-tutorial/: Cargo.toml  Dioxus.toml
tauri-tutorial/migrations/: 20250924145058_create_dogs_table.sql
tauri-tutorial/src/: app.rs  main.rs
tauri-tutorial/src-tauri/: Cargo.toml  dogs.txt  tauri.conf.json
tauri-tutorial/src-tauri/src/: lib.rs  main.rs
tauri-tutorial/src/app/: favorites.rs  nav.rs
